icons added on main oopsies

--- a/skeleton-main/client/src/components/modules/NavBar.css
+++ b/skeleton-main/client/src/components/modules/NavBar.css
@@ -5,7 +5,7 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: var(--m) var(--m) var(--m) var(--m);
+  padding: var(--s) var(--m) var(--s) var(--m);
   background-color: var(--lightpurple);
 }
 
@@ -17,30 +17,26 @@
   position: relative;
   top: 5px;
   text-decoration: none !important;
-  /* removes underline from logo (overrides the "NavLink" styling) */
 }
 
 .NavBar-linkContainer {
   margin-left: var(--l);
 }
-
-.NavBar-link {
-  color: var(--darkpurple);
-  opacity: 0.7;
-  text-decoration: none;
-  font-family: "Readex Pro";
-  font-weight: bold;
-  font-size: 21px;
+.active img {
+  fill: var(--darkpurple);
+  opacity: 1;
 }
 
-.active {
-  opacity: 1;
-  text-decoration: underline;
+.NavBar-link img {
+  width: 36px;
+  height: auto;
+  opacity: 0.6;
 }
 
-.NavBar-link:hover {
+.NavBar-link:hover img,
+.NavBar-link:active img,
+.NavBar-link.active img {
   opacity: 1;
-  text-decoration: underline;
 }
 
 .NavBar-link + .NavBar-link {
