--- a/skeleton-main/client/src/components/pages/Profile.css
+++ b/skeleton-main/client/src/components/pages/Profile.css
@@ -1,10 +1,14 @@
 .Profile-floor {
+  display: flex;
+  align-items: center;
+  justify-content: center;
   height: 35vh;
   width: 100%;
   position: absolute;
   bottom: 0;
   left: 0;
   background-color: var(--darkpurple);
+  z-index: 0;
 }
 
 body {
@@ -14,4 +18,20 @@ body {
 .Profile-name {
   font-family: "Readex Pro";
   color: var(--darkpurple);
+}
+.table-link img {
+  width: 250px;
+  height: auto;
+}
+
+.shelf-link {
+  position: absolute;
+  bottom: 130px; /* Align with the bottom of Profile-floor */
+  right: 120px; /* Align to the right side of the viewport */
+  z-index: 1; /* Ensure it overlaps the floor (adjust as necessary) */
+}
+
+.shelf-link img {
+  width: 250px; /* Adjust as needed */
+  height: auto;
 }
