--- a/skeleton-main/client/src/components/pages/Landing.css
+++ b/skeleton-main/client/src/components/pages/Landing.css
@@ -1,45 +1,213 @@
 /* Landing.css */
 
+* {
+  margin: 0;
+  padding: 0;
+}
+
+body {
+  color: #34495e;
+  font-family: "Lato", sans-serif, "Arial";
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+ul {
+  list-style: none;
+}
+
+a {
+  color: #2c3d50;
+  text-decoration-line: none;
+}
+
 .container {
-    perspective: 1000px;
-  }
-  
-  .flip-book {
-    width: 200px;
-    height: 300px;
-    position: relative;
-    margin: 0 auto;
-    transform-style: preserve-3d;
-    animation: flip 3s infinite;
-  }
-  
-  .flip-book .page {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    background-color: white;
-    border: 1px solid black;
-    line-height: 300px;
-    text-align: center;
-    font-size: 40px;
-    backface-visibility: hidden;
-  }
-  
-  .flip-book .page:nth-child(1) {
-    transform: rotateY(0deg);
-    background-color: #ff9;
-  }
-  
-  .flip-book .page:nth-child(2) {
-    transform: rotateY(-180deg);
-    background-color: #f96;
-  }
-  
-  @keyframes flip {
-    from {
-      transform: rotateY(0deg);
-    }
-    to {
-      transform: rotateY(180deg);
-    }
-  }
+  position: relative;
+  width: 1320px;
+  justify-content: center;
+  display: flex;
+  align-items: center;
+  flex-wrap: wrap;
+  padding-top: 30%;
+  margin-left: 100px;
+  text-align: center;
+}
+
+.book {
+  position: relative;
+  width: 190px;
+  height: 270px;
+  perspective: 1000px;
+  transform-style: preserve-3d;
+}
+
+.book-icon img {
+  width: 110px;
+  height: 40px;
+  margin-top: 5x;
+}
+
+.title {
+  font-size: 13px;
+  font-weight: bolder;
+  padding-top: 20px;
+  color: whitesmoke;
+}
+
+.heading {
+  color: white;
+  margin-top: 10px;
+}
+
+.sub-title {
+  color: rgb(226, 201, 201, 0.8);
+  margin-top: 10px;
+  font-size: 14px;
+}
+
+.front li {
+  background: white;
+  border-radius: 10px;
+}
+.back li {
+  background: linear-gradient(to bottom, #0c6cfd, #3f5ce3, #4f4dc9, #573eb0, #582f98);
+  border-radius: 10px;
+  width: 97.5% !important;
+}
+
+.page > li {
+  background: -webkit-linear-gradient(left, #e1ddd8 0%, #fffbf6 100%);
+  background: linear-gradient(left, #e1ddd8 0%, #fffbf6 100%);
+  box-shadow: inset 0px -1px 2px rgba(50, 50, 50, 0.1), inset -1px 0px 1px rgba(150, 150, 150, 0.2);
+  border-radius: 0px 5px 5px 0px;
+  width: 100%;
+  height: 100;
+  transform-origin: left center;
+}
+
+.front {
+  transform: rotateY(-34deg) translateZ(8px);
+}
+
+.back {
+  transform: rotateY(-15deg) translateZ(-8px);
+}
+
+.page li:nth-child(1) {
+  transform: rotateY(-28deg);
+}
+
+.page li:nth-child(2) {
+  transform: rotateY(-30deg);
+}
+
+.page li:nth-child(3) {
+  transform: rotateY(-32eg);
+}
+
+.page li:nth-child(4) {
+  transform: rotateY(-34deg);
+}
+
+.page li:nth-child(5) {
+  transform: rotateY(-36deg);
+}
+
+.front,
+.back,
+.page,
+.page > li,
+.frontcover,
+.front li,
+.back li {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  transform-style: preserve-3d;
+}
+
+.front,
+.back {
+  transform-origin: 0% 100%;
+}
+
+.front {
+  transition: all 0.8s ease, z-index 0.6s;
+}
+
+.front li:last-child {
+  transform: rotateY(180deg) translateZ(2px);
+}
+
+.page,
+.page > li {
+  position: absolute;
+}
+
+.page {
+  width: 100%;
+  height: 98%;
+  top: 1%;
+  left: 3%;
+}
+
+.page li {
+  transition-duration: 0.6s;
+}
+
+.book:hover .front {
+  transform: rotateY(-145deg), translateZ(0);
+}
+
+.book:hover > .page li:nth-child(1) {
+  transform: rotateY(-30deg);
+  transition: 1.5s;
+}
+
+.book:hover > .page li:nth-child(2) {
+  transform: rotateY(-35deg);
+  transition: 1.8s;
+}
+.book:hover > .page li:nth-child(3) {
+  transform: rotateY(-118deg);
+  transition: 1.6s;
+}
+
+.book:hover > .page li:nth-child(4) {
+  transform: rotateY(-130deg);
+  transition: 1.4s;
+}
+
+.book:hover > .page li:nth-child(5) {
+  transform: rotateY(-140deg);
+  transition: 1.2s;
+}
+
+.frontcover {
+  position: absolute;
+  background: linear-gradient(to bottom, #0c6cfd, #3f5ce3, #4f4dc9, #573eb0, #582f98);
+  height: 100%;
+  width: 101%;
+  border-radius: 5px;
+  border-top-right-radius: 10px;
+  border-bottom-right-radius: 10px;
+}
+
+.btn {
+  display: inline-block;
+  text-decoration: none;
+  margin-top: 120px;
+  padding: 8px 12px;
+  font-weight: bolder;
+  background: rgb(217, 216, 218);
+  border-radius: 4px;
+  box-shadow: -3px -3px 5px 0px #ffffffa6, 3px 3px 5px 0px #0000004a;
+  text-align: center;
+  transition: color 0.3s, border-color 0.3s;
+}
+
+.btn:hover {
+  box-shadow: -3px -3px 5px 0px #ffffffa6 inset, 3px 3px 5px 0px #0000004a inset;
+  color: rgb(39, 7, 246);
+}
