Box branch, lots of prof edits

--- a/skeleton-main/client/src/components/modules/NavBar.css
+++ b/skeleton-main/client/src/components/modules/NavBar.css
@@ -9,14 +9,10 @@
   background-color: var(--lightpurple);
 }
 
-.NavBar-title {
-  color: var(--darkpurple);
-  font-size: 32px;
-  font-family: "Special Elite";
-  font-weight: bold;
-  position: relative;
-  top: 5px;
-  text-decoration: none !important;
+.NavBar-title img {
+  height: auto;
+  width: 130px;
+  margin-top: 4px;
 }
 
 .NavBar-linkContainer {
@@ -31,6 +27,7 @@
   width: 36px;
   height: auto;
   opacity: 0.6;
+  transition: opacity 0.3s ease;
 }
 
 .NavBar-link:hover img,
