--- a/skeleton-main/client/src/components/pages/Profile.css
+++ b/skeleton-main/client/src/components/pages/Profile.css
@@ -1,8 +1,93 @@
-.Profile-floor {
+.Profile-container {
   display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  width: 40vw;
+  height: 40vh;
+  position: absolute;
+  padding-right: 2vw;
+  padding-bottom: 1vh;
+  top: 9vh;
+  left: 5vh;
+  z-index: 1;
+}
+
+.Friends-container {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-around;
+  width: 100%;
+  margin-bottom: 0px;
+}
+
+.Friends-style {
+  color: var(--darkpurple);
+  flex: 1;
+  font-size: 4vh;
+  font-family: "Readex Pro";
+  text-align: center;
+  margin: 0 5px;
+  font-weight: bold;
+}
+
+.Profile-details {
+  display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
-  height: 35vh;
+  flex: 2;
+  height: 30vh;
+  padding: 2vh;
+}
+
+.Profile-image-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  position: relative;
+  flex: 1;
+  min-height: 120px;
+  top: 0px;
+  left: 10px;
+}
+
+.Profile-image-container button {
+  margin-top: 4vh;
+  font-family: "Readex Pro";
+  font-weight: bold;
+  background-color: var(--darkpurple);
+  color: var(--white);
+  border: none;
+  font-size: 3vh;
+  border-radius: 15px;
+  padding: 6px;
+}
+
+.Profile-image {
+  width: 22vh;
+  height: auto;
+  z-index: 1;
+}
+
+.Picture-frame {
+  position: absolute;
+  width: 25vh;
+  height: auto;
+  z-index: 2;
+}
+
+.Profile-bio {
+  font-family: "Readex Pro";
+  color: var(--darkpurple);
+  font-weight: 500;
+  margin-top: 10px;
+  font-size: 3vh;
+}
+
+.Profile-floor {
+  height: 43vh;
   width: 100%;
   position: absolute;
   bottom: 0;
@@ -18,20 +103,79 @@ body {
 .Profile-name {
   font-family: "Readex Pro";
   color: var(--darkpurple);
+  font-size: 8vh;
+  margin-bottom: 5px;
 }
+/* 
+.table-link {
+  margin-top: 190px;
+  margin-bottom: 20px;
+} */
+
 .table-link img {
-  width: 250px;
+  min-width: 18vw;
   height: auto;
 }
 
-.shelf-link {
-  position: absolute;
-  bottom: 130px; /* Align with the bottom of Profile-floor */
-  right: 120px; /* Align to the right side of the viewport */
-  z-index: 1; /* Ensure it overlaps the floor (adjust as necessary) */
+.table-link,
+.shelf-link,
+.box-link {
+  display: flex;
+  flex-direction: column; /* Stack items vertically */
+  align-items: center; /* Center items horizontally */
+  justify-content: center; /* Center items vertically */
+  margin-top: 20px; /* Example margin */
 }
-
+/* 
+/* .shelf-link {
+  margin-top: -50px;
+  margin-bottom: 20vh;
+} */
 .shelf-link img {
-  width: 250px; /* Adjust as needed */
+  margin-bottom: 15vh;
+  min-width: 18vw;
   height: auto;
+}
+
+.box-link {
+  margin-top: 110px;
+}
+
+.box-link img {
+  min-width: 18vw;
+  height: auto;
+}
+
+.subpage-link {
+  text-align: center;
+  color: var(--white);
+  font-family: "Readex Pro";
+  font-weight: bold;
+  font-size: 4vh;
+  transition: color 0.3s ease;
+  transition: text-decoration 0.3s ease;
+}
+
+.subpage-link:hover {
+  color: var(--lightpurple);
+  text-decoration: underline;
+}
+
+.flex-container {
+  display: flex;
+  justify-content: space-evenly;
+  position: absolute;
+  width: 100%;
+  bottom: 0;
+  z-index: 2;
+}
+
+.shelf-link,
+.box-link,
+.table-link {
+  position: relative;
+}
+
+.flex-container img {
+  width: 220px;
 }
