--- a/skeleton-main/client/src/components/pages/Landing.css
+++ b/skeleton-main/client/src/components/pages/Landing.css
@@ -5,12 +5,13 @@
   padding: 0;
 }
 
-body {
+.Landing-Page {
   color: #34495e;
   font-family: "Lato", sans-serif, "Arial";
   display: flex;
   justify-content: center;
   align-items: center;
+  background: rgb(117, 76, 36);
 }
 
 ul {
@@ -48,6 +49,13 @@ a {
   margin-top: 5x;
 }
 
+.writer img {
+  float: left;
+  width: 30px;
+  height: 40px margin-left 30px;
+  margin-top: 5px;
+}
+
 .title {
   font-size: 13px;
   font-weight: bolder;
@@ -66,10 +74,31 @@ a {
   font-size: 14px;
 }
 
+.writer p {
+  padding-top: 5ox;
+  text-align: left;
+  float: left;
+  color: rgb(255, 255, 255, 0.9);
+  margin-top: 2px;
+}
+
+.wrtier i {
+  color: rgb(241, 232, 232, 0.8);
+}
+
+.copyright {
+  float: left;
+  padding-top: 5px;
+  margin-left: 28%;
+  color: rgb(202, 194, 194, 0.6);
+  font-size: small;
+}
+
 .front li {
   background: white;
   border-radius: 10px;
 }
+
 .back li {
   background: linear-gradient(to bottom, #0c6cfd, #3f5ce3, #4f4dc9, #573eb0, #582f98);
   border-radius: 10px;
@@ -82,12 +111,12 @@ a {
   box-shadow: inset 0px -1px 2px rgba(50, 50, 50, 0.1), inset -1px 0px 1px rgba(150, 150, 150, 0.2);
   border-radius: 0px 5px 5px 0px;
   width: 100%;
-  height: 100;
+  height: 100%;
   transform-origin: left center;
 }
 
 .front {
-  transform: rotateY(-34deg) translateZ(8px);
+  transform: rotateY(-30deg) translateZ(8px);
 }
 
 .back {
@@ -103,7 +132,7 @@ a {
 }
 
 .page li:nth-child(3) {
-  transform: rotateY(-32eg);
+  transform: rotateY(-32deg);
 }
 
 .page li:nth-child(4) {
@@ -116,11 +145,9 @@ a {
 
 .front,
 .back,
-.page,
-.page > li,
-.frontcover,
 .front li,
-.back li {
+.back li,
+.page {
   position: absolute;
   width: 100%;
   height: 100%;
@@ -150,6 +177,7 @@ a {
   height: 98%;
   top: 1%;
   left: 3%;
+  z-index: 1;
 }
 
 .page li {
@@ -157,7 +185,7 @@ a {
 }
 
 .book:hover .front {
-  transform: rotateY(-145deg), translateZ(0);
+  transform: rotateY(-145deg) translateZ(0);
 }
 
 .book:hover > .page li:nth-child(1) {
@@ -188,10 +216,11 @@ a {
   position: absolute;
   background: linear-gradient(to bottom, #0c6cfd, #3f5ce3, #4f4dc9, #573eb0, #582f98);
   height: 100%;
-  width: 101%;
+  width: 100%;
   border-radius: 5px;
   border-top-right-radius: 10px;
   border-bottom-right-radius: 10px;
+  z-index: 2;
 }
 
 .btn {
