--- a/skeleton-main/client/src/components/modules/NavBar.css
+++ b/skeleton-main/client/src/components/modules/NavBar.css
@@ -2,6 +2,8 @@
 /* @import url("https://fonts.googleapis.com/css2?family=Special+Elite&display=swap"); */
 
 .NavBar-container {
+  position: relative;
+  z-index: 1000;
   display: flex;
   align-items: center;
   justify-content: space-between;
