--- a/skeleton-main/client/src/components/pages/Home.css
+++ b/skeleton-main/client/src/components/pages/Home.css
@@ -6,7 +6,9 @@
 }
 
 .Feed-flex {
-  flex: 3;
+  flex: 4; /* Increased from 3 to 4 */
+  min-width: 60vw;
+  background-color: red;
 }
 
 .Friends-header {
@@ -18,7 +20,7 @@
 
 .Friends-flex {
   padding: 0 4vh;
-  flex: 2;
-  min-width: 20vw;
+  flex: 1;
+  max-width: 200px; /* Example maximum width */
   background-color: var(--white);
 }
