--- a/skeleton-main/client/src/components/pages/Landing.css
+++ b/skeleton-main/client/src/components/pages/Landing.css
@@ -5,13 +5,45 @@
   padding: 0;
 }
 
+.welcome-text {
+  color: var(--darkpurple);
+  font-family: "Special Elite";
+  font-weight: 600;
+  font-size: 5vh;
+}
+.start-text {
+  color: var(--darkpurple);
+  font-family: "Special Elite";
+  font-weight: 600;
+  font-size: 4vh;
+  margin-bottom: 4vh;
+}
+.front-subtext {
+  color: var(--darkpurple);
+  font-family: "Readex Pro";
+  font-weight: 500;
+  font-size: 2vh;
+}
+.login-button-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 100%; /* or a fixed height, depending on your design */
+  width: 100%; /* or a fixed width */
+}
+.logo {
+  margin-top: 2vh;
+  margin-bottom: 4vh;
+  width: 50vh;
+}
 .Landing-Page {
   display: flex;
   justify-content: center;
   align-items: center;
   min-height: 100vh;
   width: 100%;
-  background-color: var(--darkpurple);
+  background-color: var(--brown);
 }
 
 ul {
@@ -24,17 +56,13 @@ a {
 }
 
 .container {
-  /* position: absolute; */
-  /* width: 1320px; */
   justify-content: center;
   display: flex;
   align-items: center;
-  /* flex-wrap: wrap; */
-  /* padding-top: 30%; */
-  /* margin-left: 100px; */
   text-align: center;
   height: 100%;
   width: 100%;
+  padding: 2vh;
 }
 
 .book {
@@ -98,20 +126,23 @@ a {
 
 .front li {
   background: white;
-  border-radius: 10px;
+  border-radius: 15px;
 }
 
 .back li {
-  background: linear-gradient(to bottom, #0c6cfd, #3f5ce3, #4f4dc9, #573eb0, #582f98);
-  border-radius: 10px;
+  /* background: linear-gradient(to bottom, var(--darkpurple), var(--lightpurple)); */
+  background: var(--lightpurple);
+  border-radius: 15px;
   width: 97.5% !important;
+  padding-left: 2vh;
+  padding-right: 2vh;
 }
 
 .page > li {
   background: -webkit-linear-gradient(left, #e1ddd8 0%, #fffbf6 100%);
   background: linear-gradient(left, #e1ddd8 0%, #fffbf6 100%);
   box-shadow: inset 0px -1px 2px rgba(50, 50, 50, 0.1), inset -1px 0px 1px rgba(150, 150, 150, 0.2);
-  border-radius: 0px 5px 5px 0px;
+  border-radius: 5px 15px 15px 5px;
   width: 100%;
   height: 100%;
   transform-origin: left center;
@@ -219,14 +250,25 @@ a {
 }
 
 .frontcover {
+  display: flex;
+  flex-direction: column;
+  /* justify-content: space-around; */
+  justify-content: center; /* This will center the items vertically */
+
+  align-items: center;
   position: absolute;
-  background: linear-gradient(to bottom, #0c6cfd, #3f5ce3, #4f4dc9, #573eb0, #582f98);
+  /* background: linear-gradient(to bottom, var(--darkpurple), var(--lightpurple)); */
+  background: var(--lightpurple);
+  /* background: linear-gradient(to bottom, var(--white), var(--lightpurple)); */
+
   height: 100%;
   width: 100%;
   border-radius: 5px;
-  border-top-right-radius: 10px;
-  border-bottom-right-radius: 10px;
+  border-top-right-radius: 15px;
+  border-bottom-right-radius: 15px;
   z-index: 2;
+  padding-left: 2vh;
+  padding-right: 2vh;
 }
 
 .btn {
