--- a/skeleton-main/client/src/components/pages/Landing.css
+++ b/skeleton-main/client/src/components/pages/Landing.css
@@ -125,7 +125,7 @@ a {
 }
 
 .front li {
-  background: white;
+  background: linear-gradient(left, #e1ddd8 0%, #fffbf6 100%);
   border-radius: 15px;
 }
 
@@ -187,7 +187,7 @@ a {
 }
 .page {
   position: absolute;
-  width: 96%;
+  width: 100%;
   height: 100%;
   transform-style: preserve-3d;
 }
@@ -218,7 +218,7 @@ a {
 }
 
 .page li {
-  transition-duration: 0.6s;
+  transition-duration: 0.8s;
 }
 
 .book:hover .front {
@@ -226,27 +226,27 @@ a {
 }
 
 .book:hover .page li:nth-child(1) {
-  transform: rotateY(-30deg);
-  transition: 1.5s;
+  transform: rotateY(-16deg);
+  transition: 1.4s;
 }
 
 .book:hover .page li:nth-child(2) {
-  transform: rotateY(-35deg);
-  transition: 1.8s;
+  transform: rotateY(-18deg);
+  transition: 1.4s;
 }
 .book:hover .page li:nth-child(3) {
-  transform: rotateY(-118deg);
-  transition: 1.6s;
+  transform: rotateY(-135deg);
+  transition: 1.4s;
 }
 
 .book:hover .page li:nth-child(4) {
-  transform: rotateY(-130deg);
-  transition: 1.4s;
+  transform: rotateY(-140deg);
+  transition: 1.2s;
 }
 
 .book:hover .page li:nth-child(5) {
   transform: rotateY(-145deg);
-  transition: 1.2s;
+  transition: 1s;
 }
 
 .frontcover {
