--- a/skeleton-main/client/src/components/modules/Feed.css
+++ b/skeleton-main/client/src/components/modules/Feed.css
@@ -1,8 +1,25 @@
-.title {
+.post-img {
+  flex: 1;
+  align-items: center;
+  justify-content: center;
+  padding-right: 0vh;
+}
+
+.post-img img {
+  width: 8vh;
+  border-radius: 50%;
+}
+
+.name-container {
+  padding: 3vh;
+  display: flex;
+  align-items: center; /* This will vertically center the text within the title area */
+  justify-content: flex-start; /* Align text to the start */
   font-family: "Readex Pro";
   color: var(--darkpurple);
   font-weight: bold;
-  font-size: 4vh;
+  font-size: 2vh;
+  flex: 10;
 }
 
 .post-container {
@@ -19,14 +36,17 @@
 .post-top-bar {
   display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: flex-start;
+  flex-direction: row;
+  padding: 3vh;
   width: 100%;
-  height: 6vh;
-  background-color: var(--darkpurple);
-  /border-top-left-radius: 25px;
+  height: 4vh;
+  background-color: var(--lightpurple);
+  /* background-color: var(--lightpurple); */
+  border-top-left-radius: 25px;
   border-top-right-radius: 25px;
 }
-
+/* 
 .post-bar {
   padding: 1vh;
   display: flex;
@@ -34,10 +54,10 @@
   justify-content: center;
   width: 100%;
   background-color: var(--lightpurple);
-}
+} */
 
 .post-bottom-bar {
-  padding: 1.5vh;
+  padding: 1vh 3vh;
   height: 10vh;
   border-bottom-left-radius: 25px;
   border-bottom-right-radius: 25px;
@@ -48,11 +68,13 @@
 }
 
 .buttons-container {
+  /* background-color: green; */
   display: flex;
   flex-direction: row;
   align-items: center;
   justify-content: flex-start;
-  /* flex-grow: 1; */
+  width: 100%;
+  height: 100%;
   /* margin-left: 1vh; */
   flex: 3;
 }
@@ -64,16 +86,17 @@
 
 .react-img img {
   height: 4vh;
-  padding-right: 1vh;
+  /* padding-right: 1vh; */
   transition: transform 0.3s ease;
 }
 .react-img {
   display: flex;
   align-items: center;
   justify-content: flex-start;
-  margin-right: 10px;
+  /* margin-right: 10px; */
   flex-shrink: 0;
-  padding: 5px;
+  padding-right: 3vh;
+  /* padding: 5px; */
   transition: transform 0.3s ease;
 }
 
@@ -142,7 +165,7 @@
   height: 0.5vh;
   align-items: center;
   /* background-color: red; */
-  margin-left: 2vh;
+  /* margin-left: 1vh; */
   margin-bottom: 1vh;
   flex: 1;
   width: 100%;
