--- a/skeleton-main/client/src/components/modules/Feed.css
+++ b/skeleton-main/client/src/components/modules/Feed.css
@@ -16,10 +16,10 @@
   align-items: center; /* This will vertically center the text within the title area */
   justify-content: flex-start; /* Align text to the start */
   font-family: "Readex Pro";
-  color: var(--darkpurple);
+  color: var(--lightpurple);
   font-weight: bold;
-  font-size: 2vh;
-  flex: 10;
+  font-size: 1.8vh;
+  flex: 12;
 }
 
 .post-container {
@@ -27,7 +27,7 @@
   flex-direction: column;
   width: 60%;
   height: 40vh;
-  background-color: #ffffff;
+  background-color: var(--lightpurple);
   margin: 10px auto;
   border-radius: 25px;
   overflow: hidden;
@@ -38,10 +38,10 @@
   align-items: center;
   justify-content: flex-start;
   flex-direction: row;
-  padding: 3vh;
+  padding: 4vh;
   width: 100%;
   height: 4vh;
-  background-color: var(--lightpurple);
+  background-color: var(--darkpurple);
   /* background-color: var(--lightpurple); */
   border-top-left-radius: 25px;
   border-top-right-radius: 25px;
@@ -61,7 +61,7 @@
   height: 10vh;
   border-bottom-left-radius: 25px;
   border-bottom-right-radius: 25px;
-  background-color: var(--lightpurple);
+  background-color: var(--darkpurple);
   display: flex;
   flex-direction: column;
   align-items: flex-start;
@@ -103,7 +103,7 @@
 .react-img:hover img.default-img,
 .react-img:hover .react-btn {
   transform: scale(1.1);
-  color: var(--darkpurple);
+  color: var(--white);
 }
 
 .image-container {
@@ -137,7 +137,7 @@
 
 .react-btn {
   font-family: "Readex Pro";
-  color: var(--white);
+  color: var(--lightpurple);
   border: none;
   background: none;
   cursor: pointer;
@@ -161,12 +161,12 @@
 .likes-style {
   font-family: "Readex Pro";
   font-weight: 100;
-  color: white;
-  height: 0.5vh;
+  color: var(--lightpurple);
   align-items: center;
   /* background-color: red; */
   /* margin-left: 1vh; */
   margin-bottom: 1vh;
+  font-size: 2.4vh;
   flex: 1;
   width: 100%;
   height: 100%;
