--- a/skeleton-main/client/src/components/pages/search.css
+++ b/skeleton-main/client/src/components/pages/search.css
@@ -4,57 +4,48 @@
   margin: 0;
   font-family: "Poppins", sans-serif;
 }
-:root {
+/* :root {
   --primary-color: #755139ff;
   --secondary-color: #d4b996ff;
-}
+} */
 body {
-  background-color: var(--primary-color);
+  background-color: var(--darkpurple);
 }
+
 html {
   font-size: 75.5%;
 }
 .header {
   width: 100%;
-  height: 500px;
-  color: var(--secondary-color);
-  box-shadow: 0 5px 10px var(--secondary-color);
+  height: 20vh;
+  padding-top: 4vh;
+  color: var(--white);
+  justify-content: center;
+  /* background-color: red; */
+  /* box-shadow: 0 5px 10px var(--secondary-color); */
   display: flex;
   align-items: center;
   position: relative;
 }
-.header::before {
-  content: "";
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5));
-  clip-path: circle(60% at left 300px);
-  z-index: -1;
-}
+
 .row2 {
-  position: absolute;
-  top: 10px;
-  right: 150px;
+  /* position: absolute; */
+  /* top: 10px; */
+  /* right: 150px; */
   text-align: center;
 }
 .row2 h2 {
-  font-size: 3rem;
-  margin-top: 20px;
-  margin-bottom: 15px;
+  font-size: 7vh;
+  margin-top: 2vh;
+  margin-bottom: 2vh;
+  font-family: "Special Elite";
+  font-weight: 500;
 }
 .row2 img {
   margin-top: 30px;
   width: 250px;
 }
-.row1 h1 {
-  font-size: 3rem;
-  text-align: center;
-  margin-left: 35px;
-  font-family: "Bodoni Moda", serif;
-}
+
 .search {
   display: flex;
   align-items: center;
@@ -63,65 +54,93 @@ html {
 .search input {
   outline: 0;
   border: 0;
-  width: 350px;
-  height: 35px;
-  padding: 0 0.5rem;
-  font-size: 15px;
-  font-weight: bold;
+  width: 30vw;
+  height: 5vh;
+  padding: 1vh 2vh;
+  /* padding: 0 0.5rem; */
+  font-size: 3vh;
+  font-family: "Readex Pro";
+  font-weight: 400;
+  color: var(--darkpurple);
 }
 .search button {
   outline: none;
   border: none;
   height: 35px;
-  padding: 0 0.5rem;
 }
+
 .container {
-  width: 65%;
-  margin: 0 auto;
-  margin-top: 25px;
+  width: 100%;
+  padding: 0vh 10vh;
+  /* margin: 0 auto; */
+  /* margin-top: 25px; */
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(200px, 0.5fr));
-  grid-gap: 20px;
+  grid-gap: 4vh;
   box-sizing: border-box;
 }
 .card {
-  background-color: var(--secondary-color);
-  border-radius: 1rem;
-  padding: 0.5rem;
-  margin-bottom: 10px;
-  box-shadow: 0 5px 5px rgba(212, 185, 150, 0.5);
-  transition: 0.5s;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  justify-content: center;
+  background-color: var(--lightpurple);
+  border-radius: 2rem;
+  padding: 2vh;
+  outline: none;
+  /* margin-bottom: 10px; */
+  /* box-shadow: 0 5px 5px rgba(212, 185, 150, 0.5); */
+  transition: transform 0.3s ease;
+  transition: background-color 0.3s ease;
   text-align: center;
   position: relative;
+  height: 65vh;
+  cursor: pointer;
 }
 .card:hover {
-  transform: scale(0.9);
-  background-color: rgba(255, 255, 255, 0.8);
+  /* outline: var(--lightpurple); */
+  transform: scale(1.07);
+  background-color: var(--white);
 }
 .card img {
-  width: 100%;
-  height: 200px;
-  border-radius: 1rem 1rem 0 0;
+  /* max-width: 50vh; */
+  /* width: 30vh; */
+  max-height: 70vh;
+  width: 30vh;
+  /* max-height: 40vh; */
+  /* height: 200px; */
+  /* border-radius: 1rem 1rem 0 0; */
 }
 .card .bottom {
   display: flex;
-  flex-direction: column;
+  align-items: center;
+  /* margin-top: 0vh; */
+  justify-content: center;
+  /* padding-top: 0px; */
+  height: 20vh;
+  width: 100%;
+  /* background-color: green; */
+  /* white-space: nowrap; */
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
+
 .card .bottom .title {
-  font-size: 14px;
-  margin-bottom: 32px;
+  /* display: flex;
+  align-items: center;
+  justify-content: center; */
+  font-size: 3vh;
+  font-family: "Readex Pro";
+  color: var(--darkpurple);
+  font-weight: 600;
+  /* padding: 10vh; */
+  /* flex-grow: 100; */
+  /* line-height: 1.2; */
+
+  /* flex: 100; */
+  /* word-wrap: break-word; */
 }
-.card .bottom .amount {
-  position: absolute;
-  bottom: 10px;
-  left: 10px;
-  right: 10px;
-  background-color: var(--primary-color);
-  color: var(--secondary-color);
-  font-size: 13px;
-  font-weight: bold;
-  padding: 0.2rem;
-}
+
 .overlay {
   min-height: 100vh;
   width: 100%;
