--- a/skeleton-main/client/src/components/pages/Profile.css
+++ b/skeleton-main/client/src/components/pages/Profile.css
@@ -1,18 +1,30 @@
 .Profile-container {
   display: flex;
   flex-direction: row;
-  align-items: center;
+  align-items: flex-start;
   justify-content: space-between;
   width: 100%;
-  margin-top: 2vh;
+  height: 60%;
+  /* margin-top: 2vh; */
+  flex: 2;
+  /* background-color: green; */
+  flex-grow: 100;
+  /* padding: 5vh; */
 }
 
+.topleft-flex {
+  width: 100%;
+  height: 100%;
+  flex-grow: 100;
+  flex: 12;
+  /* background-color: red; */
+}
 .Friends-container {
   display: flex;
   flex-direction: row;
   align-items: center;
   justify-content: center;
-  width: 60%;
+  width: 100%;
   margin-bottom: 0px;
   margin-top: 3vh;
 }
@@ -20,10 +32,10 @@
 .Friends-style {
   color: var(--darkpurple);
   flex: 1;
-  font-size: 1.4vw;
+  font-size: 3vh;
   font-family: "Readex Pro";
   text-align: center;
-  margin: 0 5px;
+  /* margin: 0 1vh; */
   font-weight: 550;
 }
 
@@ -122,14 +134,16 @@ body {
 .Profile-name {
   font-family: "Readex Pro";
   color: var(--darkpurple);
-  font-size: 3vw;
+  font-size: 6vh;
   font-weight: 650;
   margin-bottom: 0vh;
+  text-align: center;
+  /* :center ; */
 }
 
 .Username-style {
   color: var(--darkpurple);
-  font-size: 1.6vw;
+  font-size: 4vh;
   font-family: "Readex Pro";
   font-weight: 400;
   margin-top: 0vh;
@@ -155,8 +169,9 @@ body {
 }
 
 .shelf-link img {
-  width: 18vw;
-  height: auto;
+  height: 50vh;
+  /* width: 18vw; */
+  /* height: auto; */
 }
 
 .box-link {
@@ -164,7 +179,7 @@ body {
 }
 
 .box-link img {
-  width: 18vw;
+  width: 40vh;
   height: auto;
 }
 
@@ -200,7 +215,9 @@ body {
   justify-content: flex-start;
   flex: 2;
   z-index: 1;
-  width: 100%;
+  /* width: 100%; */
+  /* height: 100%; */
+  /* flex-grow: 100%; */
 }
 
 .bottomleft-flex {
@@ -209,7 +226,10 @@ body {
   justify-content: space-around;
   align-items: center;
   width: 100%;
-  flex: 3;
+  flex: 10;
+  height: 50vh;
+  margin-bottom: 3vh;
+  /* background-color: pink; */
 }
 
 .right-flex {
@@ -234,6 +254,6 @@ body {
   width: 220px;
 }
 .table-link img {
-  width: 20vw;
+  width: 40vh;
   height: auto;
 }
