--- a/skeleton-main/client/src/components/pages/Profile.css
+++ b/skeleton-main/client/src/components/pages/Profile.css
@@ -24,9 +24,10 @@
   flex-direction: row;
   align-items: center;
   justify-content: center;
-  width: 100%;
+  width: 60%;
   margin-bottom: 0px;
   margin-top: 3vh;
+  /* background-color: red; */
 }
 
 .Friends-style {
@@ -37,6 +38,7 @@
   text-align: center;
   /* margin: 0 1vh; */
   font-weight: 550;
+  padding: 0 3vh;
 }
 
 .Profile-details {
