--- a/skeleton-main/client/src/components/modules/Feed.css
+++ b/skeleton-main/client/src/components/modules/Feed.css
@@ -28,7 +28,7 @@
   width: 60%;
   height: 40vh;
   background-color: var(--white);
-  margin: 10px auto;
+  margin: 3vh auto;
   border-radius: 25px;
   overflow: hidden;
 }
