--- a/skeleton-main/client/src/components/pages/Profile.css
+++ b/skeleton-main/client/src/components/pages/Profile.css
@@ -88,8 +88,9 @@
 
 .Profile-bio-container {
   flex: 1;
-  margin-top: 3vh;
-  max-width: 60%;
+  /* margin-top: 3vh; */
+  width: 100%;
+  height: 100%;
   align-items: center;
   justify-content: center;
   display: flex;
