--- a/skeleton-main/client/src/components/pages/search.css
+++ b/skeleton-main/client/src/components/pages/search.css
@@ -105,7 +105,7 @@ html {
 .card img {
   /* max-width: 50vh; */
   /* width: 30vh; */
-  max-height: 70vh;
+  height: 40vh;
   width: 30vh;
   /* max-height: 40vh; */
   /* height: 200px; */
