--- a/skeleton-main/client/src/components/pages/search.css
+++ b/skeleton-main/client/src/components/pages/search.css
@@ -78,6 +78,7 @@ html {
   grid-template-columns: repeat(auto-fit, minmax(200px, 0.5fr));
   grid-gap: 4vh;
   box-sizing: border-box;
+  /* background-color: red; */
 }
 .card {
   display: flex;
@@ -90,11 +91,12 @@ html {
   outline: none;
   /* margin-bottom: 10px; */
   /* box-shadow: 0 5px 5px rgba(212, 185, 150, 0.5); */
-  transition: transform 0.3s ease;
-  transition: background-color 0.3s ease;
+  /* transition: transform 0.3s ease; */
+  /* transition: background-color 0.3s ease; */
   text-align: center;
   position: relative;
-  height: 65vh;
+  height: 45vh;
+  width: 20vh;
   cursor: pointer;
 }
 .card:hover {
@@ -103,10 +105,11 @@ html {
   background-color: var(--white);
 }
 .card img {
-  /* max-width: 50vh; */
+  max-width: 30vh;
   /* width: 30vh; */
-  max-height: 70vh;
-  width: 30vh;
+  height: 30vh;
+  /* max-height: 50vh; */
+  /* max-width: 40vh; */
   /* max-height: 40vh; */
   /* height: 200px; */
   /* border-radius: 1rem 1rem 0 0; */
@@ -155,14 +158,17 @@ html {
   justify-content: center;
 }
 .overlay-inner {
-  background: white;
-  width: 700px;
-  height: 550px;
+  background: var(--darkpurple);
+  width: 100vw;
+  height: 100vh;
   padding: 1.5rem;
   position: relative;
   box-sizing: border-box;
   overflow: hidden;
   font-size: 1.3rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 .overlay-inner .close {
   position: absolute;
@@ -204,4 +210,251 @@ html {
   margin-top: 2rem;
   text-align: justify;
   font-size: 13px;
+}
+
+.BookModal .ul {
+  list-style: none;
+}
+
+.BookModal .a {
+  color: #2c3d50;
+  text-decoration-line: none;
+}
+
+/* .container {
+  justify-content: center;
+  display: flex;
+  align-items: center;
+  text-align: center;
+  /* background-color: red; */
+/* height: 100%;
+  width: 100%; */
+/* padding: 2vh; 
+} */
+
+.BookModal .book {
+  position: relative;
+  width: 60vh;
+  height: 80vh;
+  /* align-self: center; */
+  /* justify-content: center; */
+  /* perspective: 1000px; */
+  transform-style: preserve-3d;
+}
+
+.BookModal .book-icon img {
+  width: 110px;
+  height: 40px;
+  margin-top: 5x;
+}
+
+.BookModal .img {
+  float: left;
+  width: 30px;
+  height: 40px margin-left 30px;
+  margin-top: 5px;
+}
+
+.BookModal .info {
+  font-size: 13px;
+  font-weight: bolder;
+  padding-top: 20px;
+  color: whitesmoke;
+}
+
+.BookModal .heading {
+  color: white;
+  margin-top: 10px;
+}
+
+.BookModal .sub-title {
+  color: rgb(226, 201, 201, 0.8);
+  margin-top: 10px;
+  font-size: 14px;
+}
+
+.BookModal .writer p {
+  padding-top: 5ox;
+  text-align: left;
+  float: left;
+  color: rgb(255, 255, 255, 0.9);
+  margin-top: 2px;
+}
+
+.BookModal .writer i {
+  color: rgb(241, 232, 232, 0.8);
+}
+
+.BookModal .copyright {
+  float: left;
+  padding-top: 5px;
+  margin-left: 28%;
+  color: rgb(202, 194, 194, 0.6);
+  font-size: small;
+}
+
+.BookModal .front li {
+  background: linear-gradient(left, #e1ddd8 0%, #fffbf6 100%);
+  border-radius: 15px;
+}
+
+.BookModal .back li {
+  /* background: linear-gradient(to bottom, var(--darkpurple), var(--lightpurple)); */
+  background: var(--lightpurple);
+  border-radius: 15px;
+  width: 97.5% !important;
+  padding-left: 2vh;
+  padding-right: 2vh;
+}
+
+.BookModal .page > li {
+  background: -webkit-linear-gradient(left, #e1ddd8 0%, #fffbf6 100%);
+  background: linear-gradient(left, #e1ddd8 0%, #fffbf6 100%);
+  box-shadow: inset 0px -1px 2px rgba(50, 50, 50, 0.1), inset -1px 0px 1px rgba(150, 150, 150, 0.2);
+  border-radius: 5px 15px 15px 5px;
+  width: 100%;
+  height: 100%;
+  transform-origin: left center;
+}
+
+.BookModal .front {
+  transform: rotateY(-16deg) translateZ(8px);
+}
+
+.BookModal .page li:nth-child(1) {
+  transform: rotateY(-15deg);
+}
+
+.BookModal .page li:nth-child(2) {
+  transform: rotateY(-14deg);
+}
+
+.BookModal .page li:nth-child(3) {
+  transform: rotateY(-13deg);
+}
+
+.BookModal .page li:nth-child(4) {
+  transform: rotateY(-12deg);
+}
+
+.BookModal .page li:nth-child(5) {
+  transform: rotateY(-11deg);
+}
+
+.back {
+  transform: rotateY(-10deg) translateZ(-8px);
+}
+
+.BookModal .front,
+.BookModal .back,
+.BookModal .front li,
+.BookModal .back li {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  transform-style: preserve-3d;
+}
+
+.BookModal .page {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  transform-style: preserve-3d;
+}
+
+.BookModal .front,
+.BookModal .back {
+  transform-origin: 0% 100%;
+}
+
+.BookModal .front {
+  transition: all 0.8s ease, z-index 0.6s;
+}
+
+.BookModal .front li:last-child {
+  transform: rotateY(180deg) translateZ(2px);
+}
+
+.BookModal .page,
+.BookModal .page > li {
+  position: absolute;
+}
+
+.BookModal .page {
+  /* min-width: 95%; */
+  /* width: 100%; */
+  /* height: 98%; */
+  z-index: 1;
+}
+
+.BookModal .page li {
+  transition-duration: 0.8s;
+}
+
+.BookModal .book:hover .front {
+  transform: rotateY(-150deg) translateZ(0);
+}
+
+.BookModal .book:hover .page li:nth-child(1) {
+  transform: rotateY(-16deg);
+  transition: 1.4s;
+}
+
+.BookModal .book:hover .page li:nth-child(2) {
+  transform: rotateY(-18deg);
+  transition: 1.4s;
+}
+.BookModal .book:hover .page li:nth-child(3) {
+  transform: rotateY(-135deg);
+  transition: 1.4s;
+}
+
+.BookModal .book:hover .page li:nth-child(4) {
+  transform: rotateY(-140deg);
+  transition: 1.2s;
+}
+
+.BookModal .book:hover .page li:nth-child(5) {
+  transform: rotateY(-145deg);
+  transition: 1s;
+}
+
+.BookModal .frontcover {
+  display: flex;
+  flex-direction: column;
+  /* justify-content: space-around; */
+  justify-content: center; /* This will center the items vertically */
+
+  align-items: center;
+  position: absolute;
+  /* background: linear-gradient(to bottom, var(--darkpurple), var(--lightpurple)); */
+  background: var(--lightpurple);
+  /* background: linear-gradient(to bottom, var(--white), var(--lightpurple)); */
+
+  height: 100%;
+  width: 100%;
+  border-radius: 5px;
+  border-top-right-radius: 15px;
+  border-bottom-right-radius: 15px;
+  z-index: 2;
+  padding-left: 2vh;
+  padding-right: 2vh;
+}
+
+.BookModal .btn {
+  display: inline-block;
+  text-decoration: none;
+  margin-top: 120px;
+  padding: 8px 12px;
+  font-weight: bolder;
+  background: rgb(217, 216, 218);
+  border-radius: 4px;
+  box-shadow: -3px -3px 5px 0px #ffffffa6, 3px 3px 5px 0px #0000004a;
+  text-align: center;
+  transition: color 0.3s, border-color 0.3s;
+}
+
+.BookModal .btn:hover {
+  box-shadow: -3px -3px 5px 0px #ffffffa6 inset, 3px 3px 5px 0px #0000004a inset;
+  color: rgb(39, 7, 246);
 }
