--- a/skeleton-main/client/src/components/pages/Landing.css
+++ b/skeleton-main/client/src/components/pages/Landing.css
@@ -37,14 +37,6 @@
   margin-bottom: 4vh;
   width: 50vh;
 }
-.Landing-Page {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  min-height: 100vh;
-  width: 100%;
-  background-color: var(--brown);
-}
 
 ul {
   list-style: none;
@@ -56,21 +48,17 @@ a {
 }
 
 .container {
-  justify-content: center;
+  height: 100vh;
+  width: 100vw;
   display: flex;
-
   align-items: center;
+  justify-content: center;
   /* text-align: center; */
-  /* background-color: red; */
-  height: 100%;
-  width: 100%;
+  /* background-color: blue; */
   /* padding: 2vh; */
 }
 
 .book {
-  display: flex;
-  justify-content: center;
-  align-items: center;
   /* position: center; */
   width: 60vh;
   height: 80vh;
@@ -254,6 +242,16 @@ a {
 .book:hover .page li:nth-child(5) {
   transform: rotateY(-145deg);
   transition: 1s;
+}
+
+.content {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  /* background-color: red; */
+  height: 100vh;
+  background-color: #754c24;
+  width: 100vw;
 }
 
 .frontcover {
